--- a/P2 New Sistem Basis Data/materi2new.html
+++ b/P2 New Sistem Basis Data/materi2new.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Created using Storyline 3 - http://www.articulate.com  -->
   <!-- version: 3.20.30234.0 -->
-  <title>P2 edit Sistem Basis Data</title>
+  <title>P2 New Sistem Basis Data</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no,minimal-ui"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
