--- a/P13 New DBMS/materi13new.html
+++ b/P13 New DBMS/materi13new.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Created using Storyline 3 - http://www.articulate.com  -->
   <!-- version: 3.20.30234.0 -->
-  <title>P13 edit DBMS</title>
+  <title>P13 New DBMS</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no,minimal-ui"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
